--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a class="active nounderline" href="#homeimg">home</a></li>
-                    <li><a target = "_blank" class="whitelink nounderline" href="clients.html">our clients</a></li>
+                    <li><a target = "_blank" class="whitelink nounderline" href="clients.html">our amici</a></li>
                     <li><a class="whitelink nounderline" href="about.html">about us</a></li>
                     <li><a class="whitelink nounderline" href="carreers.html">carreers</a></li>
                 </ul>
